# nodyx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  NOTICE  README.md  demo.html  ecosystem.config.example.js  install.sh  install_tunnel.sh  uninstall.sh
.github/: FUNDING.yml  dependabot.yml
SPECS/: NODYX_MEDIA_ENGINE_RUST.md  NODYX_SFU_CDC.md  NODYX_SFU_SCREENSHARE.md
docs/: RELEASE.md
nexus-authenticator/: README.md  package.json
nexus-core/: .env.example  README.md  package.json  vitest.config.ts
nexus-frontend/: .env.example  package-lock.json  package.json
nexus-p2p/: Cargo.toml
nodyx-authenticator/: package-lock.json  package.json
nodyx-core/: .env.example  package-lock.json  package.json
nodyx-docs/: package-lock.json  package.json  svelte.config.js  vite.config.ts
nodyx-frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  vitest.config.ts
nodyx-hub/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
nodyx-landing/: package-lock.json  package.json
nodyx-p2p/: .gitignore  Cargo.toml
nodyx-p2p/crates/nexus-relay/: Cargo.toml
nodyx-p2p/crates/nexus-relay/src/: keepalive.rs  main.rs
nodyx-p2p/crates/nexus-relay/src/client/: mod.rs
nodyx-p2p/crates/nexus-relay/src/server/: tcp_listener.rs
nodyx-p2p/crates/nexus-turn/: Cargo.toml
nodyx-p2p/crates/nexus-turn/src/: auth.rs  main.rs  server.rs
nodyx-p2p/crates/nodyx-gossip/: Cargo.toml
nodyx-p2p/crates/nodyx-gossip/src/: main.rs  node.rs  protocol.rs
nodyx-p2p/crates/nodyx-server/: Cargo.toml
nodyx-p2p/crates/nodyx-server/src/: error.rs  extractors.rs  main.rs  state.rs
nodyx-p2p/crates/nodyx-server/src/routes/: admin.rs  auth.rs  directory.rs  mod.rs  notifications.rs  users.rs
nodyx-p2p/crates/nodyx-server/src/services/: email.rs
nodyx-p2p/crates/nodyx-sfu-mediasoup/: Cargo.toml  nodyx-sfud.service
nodyx-p2p/crates/nodyx-sfu-mediasoup/src/: engine.rs  lib.rs  main.rs
nodyx-p2p/crates/nodyx-sfu/src/: lib.rs  voice.rs
scripts/: bump-version.sh
(+563 files in other folders)
