[package]
name = "nodyx-gossip"
version = "0.1.0"
edition = "2021"
description = "Decouverte de pairs Nodyx par gossip (anti-entropie epidemique). Zero dependance, std uniquement."

[[bin]]
name = "nodyx-gossip"
path = "src/main.rs"

[dependencies]
# Une seule entorse au zero-dependance, justifiee : la crypto a courbe elliptique
# ne se code PAS a la main (constant-time, side-channels). ed25519-dalek est l'une
# des implementations Rust les plus auditees. Tout le reste reste fait maison.
ed25519-dalek = "2"
getrandom = "0.2"   # seed CSPRNG (32 octets) pour la cle d'identite
